Fix border radius on safari 🍏

--- a/src/components/Dock/Dock.module.scss
+++ b/src/components/Dock/Dock.module.scss
@@ -12,9 +12,11 @@
   bottom: 10%;
   transform: translate(-50%);
   z-index: 999;
-
   background: $bt;
   border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  
   box-shadow: 0 4px 3px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(20px);
